2009-10-29  Charlie Zender  <zender@uci.edu>

	* Add short option -6, and better document -6, --64, --64bit options

2009-10-21  Henry Butowsky  <henryb@hush.com> 

	* Ensure ncap2 compiles	with NCO_INT==NCO_TYP_INT. Affects
	fmc_all_cls.cc msk_cls srt_cls fmc_gsl_cls.cc, map_srt_tmp.hh,
	ncoGrammar.g   
	
2009-10-15  Henry Butowsky  <henryb@hush.com> 

	* Tidy-up sort methods srt_cls

2009-10-13  Henry Butowsky  <henryb@hush.com> 

	* Add secret flag tst_udunits option to ncks. 
	Usage: --tst_udunits,'units_in','units_out','calendar type'
        
2009-09-30  Charlie Zender  <zender@uci.edu>

	* Remove attempt to set chunking in ncap2 writes

2009-09-26  Charlie Zender  <zender@uci.edu>

	* Add CNK option to Makefile to set HAVE_NEW_CHUNKING_API to
	handle netCDF 4.0.x vs. netCDF 4.1+ chunking API differences 

	* Fix library flags for parallel HDF/netCDF4

2009-09-24  Henry Butowsky  <henryb@hush.com> 

	* Add manual sub-section on calendar CF support in UDUnits node
	
2009-09-21  Charlie Zender  <zender@uci.edu>

	* Implement Intel mpicc/mpiCC compilers on greenplanet with lustre

2009-09-11  Henry Butowsky  <henryb@hush.com> 

	* Committed first cut of nco_cal.{c,h}

	* These are calendar functions for hyperslabbing coordinate
	variables with CF attribute "calendar". Currently supported
	are "360_day","no_leap","365_day". Other values for date
	evaluation default to "standard", the  	UDUnits1/2 calendar
	functionality. NB: regardless of the chosen calendar type all date
	strings are parsed by UDUnits1/2 
	
2009-08-28  Charlie Zender  <zender@uci.edu>

	* Add spiral logo by Andrea Cimatoribus to bakeoff

2009-08-26  Henry Butowsky  <henryb@hush.com> 

	* Change nco_lmt_udu_cnv() UDUnits1 code branch
	Parse bare date with utScan() instead of manually

2009-08-25  Charlie Zender  <zender@uci.edu>

	* Add numeric cog logo by Rob Hetland to the bakeoff

2009-08-21  Henry Butowsky  <henryb@hush.com> 

	* Tidy-up of srt_cls---functions for sorting vars
